[tool.poetry]
name = "hypermodern-project"
version = "0.1.0"
description = "My hypermodern python project template."
authors = ["Raymond Baruth <raymondbaruth@raybit.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rayigen85/hypermodern-project"
keywords = ["template", "hypermodern"]


[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"
requests = "^2.27.1"
nox = "^2022.1.7"
flake8 = "^4.0.1"
black = "^22.3.0"
flake8-black = "^0.3.3"
pytest = "^7.1.2"
coverage = "^6.3.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
flake8-import-order = "^0.18.1"
isort = "^5.10.1"
flake8-bugbear = "^22.4.25"
flake8-bandit = "^3.0.0"
safety = "^1.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-project = "hypermodern_project.console:main"
